Use String.strip() and .isBlank() instead of trim().
New in Java 11.